[package]
name = "famiko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.5"
hex = "0.4.3"
log = "0.4.16"
pixels = "0.9.0"
pretty-hex = "0.2.1"
tokio = { version = "1", features = ["full"] }
winit = "0.26.1"
winit_input_helper = "0.11.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
portaudio = "*"
