[package]
name = "famiko"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "apu",
]

[dependencies]
apu = { path = "apu" }
clap = "3.2.5"
hex = "0.4.3"
hound = "3.4.0"
instant = "0.1"
log = "0.4.16"
pixels = "0.9.0"
pollster = "0.2"
pretty-hex = "0.2.1"
winit = "0.26.1"
wgpu = { version = "0.12.0", features = ["spirv"]}
winit_input_helper = "0.11.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
portaudio = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
wgpu = { version = "0.12.0", features = ["spirv", "webgl"]}
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"

